--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	
 	<!-- bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-  	<script src="script/bootstrap.bundle.min.js"></script>
+	<!-- <link href="css/bootstrap.min.css" rel="stylesheet">
+  	<script src="script/bootstrap.bundle.min.js"></script> -->
 
 	<!-- bulma -->
 	<link rel="stylesheet" href="css/bulma.min.css">
@@ -44,7 +44,7 @@
 		</div>
 		<div data-role="content" style="text-align:center">
 			<ul data-role="listview" data-inset="true">
-				<li><a href="#info">소개</a></li>
+				<li><a href="info.html">소개</a></li>
 				<li><a href="#personal">인적</a></li>
 				<li><a href="#skill">기술</a></li>
 				<li><a href="#movie" data-rel="dialog">프로젝트</a></li>
@@ -56,7 +56,7 @@
 	</div>
 	
 	<!-- bootstrap 사용(이미지, 테이블) -->
-	<div data-role="page" id="info" data-theme="a">
+	<!-- <div data-role="page" id="info" data-theme="a">
 		<div data-role="header" data-theme="a">
 			<a href="#home" data-icon="arrow-l" data-direction="reverse">돌아가기</a>			
 			<h1>소개</h1>
@@ -104,7 +104,7 @@
 		<div data-role="footer" data-position="fixed" data-theme="a">
 			<h1>202152419_정유리</h1>
 		</div>		
-	</div>
+	</div> -->
 
 
 
