--- a/info.html
+++ b/info.html
@@ -24,9 +24,9 @@
 </head>
 <body>
     
-    <div data-role="page" id="info" data-theme="a">
+    <div data-role="page" data-theme="a">
 		<div data-role="header" data-theme="a">
-			<a href="#home" data-icon="arrow-l" data-direction="reverse">돌아가기</a>			
+			<a href="index.html" data-icon="arrow-l" data-direction="reverse">돌아가기</a>			
 			<h1>소개</h1>
 		</div>
 		<div data-role="content">		
