--- a/project.html
+++ b/project.html
@@ -19,9 +19,9 @@
 
 </head>
 <body>
-	<div data-role="page" id="movie" data-theme="a">
+	<div data-role="page" data-theme="a">
 		<div data-role="header" data-position="fixed" data-theme="a">
-			<a href="#home" data-icon="arrow-l" data-direction="reverse">돌아가기</a>
+			<a href="index.html" data-icon="arrow-l" data-direction="reverse">돌아가기</a>
 			<h1>프로젝트</h1>
 		</div>
 		<div data-role="content" >
