--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<li><a href="info.html">소개</a></li>
 				<li><a href="personal.html">인적</a></li>
 				<li><a href="skills.html">기술</a></li>
-				<li><a href="project.html" data-rel="dialog">프로젝트</a></li>
+				<li><a href="project.html">프로젝트</a></li>
 			</ul>
 		</div>
 		<div data-role="footer" data-position="fixed" data-theme="a">
