--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
 		</div>
 		<div data-role="content">		
 			<div data-role="collapsible-set" data-theme="a" data-content-theme="a">
-				<div data-role="collapsible" data-collapsed="false">
+				<div data-role="collapsible">
 					<h3>SKILLS</h3>
 					<h4>Programming</h4>
 					<img src="https://img.shields.io/badge/HTML-E34F26.svg?&style=for-the-badge&logo=HTML5&logoColor=white"/>
