--- a/info.html
+++ b/info.html
@@ -31,7 +31,7 @@
 		</div>
 		<div data-role="content">		
 			<div data-role="collapsible-set" data-theme="a" data-content-theme="a">
-				<div data-role="collapsible" data-collapsed="false">
+				<div data-role="collapsible">
 					<h3>INFO</h3>
 
 					<table>
